--- a/.github/workflows/linux-on-push.yaml
+++ b/.github/workflows/linux-on-push.yaml
@@ -1,5 +1,9 @@
 name: Linux on push
-on: push
+on:
+    push:
+        paths:
+            -   'src/**'
+            -   'Makefile'
 
 jobs:
     build:
